Fix some resolve issues (fullyQualifiedReferences & enums in objectLiterals in return statement).